--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,19 @@ android {
 }
 
 dependencies {
+    //Read rss feeds
+    implementation("com.rometools:rome:1.18.0")
+    implementation("com.rometools:rome-utils:1.18.0")
+    implementation("com.rometools:rome-opml:1.18.0")
+    //implementation("com.rometools:rome-modules:1.18.0")
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
