--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,10 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation "com.google.android.material:material:1.9.0"
 
+    //Load image form url
+    implementation("io.coil-kt:coil-compose:2.2.0")
+    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
