--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.2.0")
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
 
+    //webview in compose
+    implementation("com.google.accompanist:accompanist-themeadapter-material3:0.31.5-beta")
+    implementation "com.google.accompanist:accompanist-webview:0.31.5-beta"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
