--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     implementation("com.google.accompanist:accompanist-themeadapter-material3:0.31.5-beta")
     implementation "com.google.accompanist:accompanist-webview:0.31.5-beta"
 
+    //PdfViewer in compose
+    implementation 'io.github.grizzi91:bouquet:1.1.2'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
